Update travis to the latest configurations

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,9 @@
-arch: arm64
 language: node_js
-node_js:
-  - 11.6.0
- cache: yarn
+services:
+  - docker
 
 before_install:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-
-install:
-  - yarn install
-
+  - docker build -t yimlingloo/reactapp -f Dockerfile.dev .
+  
 script:
-  - yarn test
-  - yarn run build
-
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  on:
-    branch:gh-pages
-
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - docker run yimlingloo/reactapp npm run test -- --coverage
