--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -18,4 +18,5 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
+    - run: export PATH=$PATH:$HOME/node_modules
     - run: npm run build --if-present
