--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Use Node.js 16
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+        cache: 'npm'
     - name: Install react-scripts
       run: npm install react-scripts
     - name: Add node_modules to PATH
