--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -23,3 +23,20 @@ jobs:
     - name: Add node_modules to PATH
       run: echo "export PATH=$PATH:$HOME/node_modules" >> ~/.bashrc
     - run: npm run build --if-present
+    - name: Build and push Docker images
+    - uses: docker/build-push-action@v4.1.1
+    - name: Login to Docker Hub
+    - uses: docker/login-action@v2
+    -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: user/app:latest
+            
