--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -24,7 +24,7 @@ jobs:
       run: echo "export PATH=$PATH:$HOME/node_modules" >> ~/.bashrc
     - run: npm run build --if-present
     - name: Build and push Docker images
-    - uses: docker/build-push-action@v4.1.1
+      uses: docker/build-push-action@v4.1.1
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
