--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -23,8 +23,9 @@ jobs:
     - name: Add node_modules to PATH
       run: echo "export PATH=$PATH:$HOME/node_modules" >> ~/.bashrc
     - run: npm run build --if-present
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v4.1.1
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -33,8 +34,8 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v4
       with:
-          context: .
           push: true
           tags: user/app:latest
+          
           
     
