--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -35,7 +35,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
           push: true
-          tags: user/app:latest
+          tags: knowlegepot/examplereactapp:latest
           
           
     
