--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
   - docker
 
 before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.19
   - docker build -t reactapp -f Dockerfile .
   
 script:
